# algorithm-cpp

./: .gitignore  README.md  bookmark.md
src/: .clang_complete  CMakeLists.txt  explore.md  geeksforgeeks.md  leetcode.md  main.cc  template.md
src/algo/: CMakeLists.txt  dp_algo.h  dynamic_algo.h  expression_convert.cc  find_kth_element.h  greedy_algo.h  maximum_conti_subsequence.h
src/array_stack_queue/: ArrayStackQueue.h  CMakeLists.txt
src/bit_manipulation/: CMakeLists.txt  FindMaxSubArrayXor.h  FindNthMagicNumber.h
src/common_utils/: FunctionObject.h
src/container/: CMakeLists.txt  binary_heap.h  binary_search_tree.cc  binary_search_tree.h  graph_container.h  hash_table.h  list.h  vector.cc  vector.h
src/dp/: BooleanParenthesizationProblem.h  CMakeLists.txt  CoinChange.h  CoverDistance.h  CutRod.h  EditDistance.h  FindLongestPath.h  FrogJump.h  KnapsackProblem.h  LongestCommonSubSequence.h  LongestIncreasingSubSequence.cc  LongestIncreasingSubSequence.h  MinimumPartition.h  OptimalStrategyForGame.h  PartitionProblem.h  SubsetSumProblem.h  WordBreak.h
src/geeksforgeeks/: ConvertRomanToDecimal.cc  LPS.cc  README.md  main.cc  test  test.cc
src/geeksforgeeks/searching/: binary_search.cc
src/graph/: CMakeLists.txt  Graph.h
src/greedy/: ActivitySelection.h  CMakeLists.txt
src/leetcode/: 10.cc  100.cc  1008.cc  101.cc  102.cc  103.cc  104.cc  105.cc  106.cc  107.cc  108.cc  109.cc  11.cc  110.cc  111.cc  112.cc  113.cc  114.cc  1143.cc  115.cc  117.cc  118.cc  119.cc  12.cc  120.cc  121.cc  122.cc  123.cc  124.cc  125.cc  127.cc  129.cc  13.cc  130.cc  131.cc  132.cc  133.cc  134.cc  136.cc  137.cc  (+222 more)
src/linkedlist/: CMakeLists.txt  DetectLoopAndRemove.h  LinkedList.h  LinkedListSortByMergeSort.h  MergeSortLinkedList.h  MergeTwoSortedLinkedList.h  ReverseLinkedList.h
src/number_theory/: CMakeLists.txt
src/old-back/algo/: dp_algo.h  expression_convert.h  maximum_conti_subsequence.cc
src/old-back/container/: CMakeLists.txt  binary_heap.h  graph_container.h  list.cc  stack.h
src/old-back/sort/: CMakeLists.txt
src/review/: CoinChange.cc  CoinGame.cc  EditDistance.cc  Makefile  MergeTwoSortedArrayWithDiffSize.cc  NumberOfWays.cc  SubSetSumEq.cc  WordBreak.cc  main.cc
src/sort/: sort.h
src/sort_search/: BinarySearch.h  CMakeLists.txt  FindKthElement.h  FindPairEqSum.h  FindPairSumClosest.h  NormalSearchAlgo.h  NormalSortAlgo.h
src/string_array/: CMakeLists.txt  ConvertArrayInfoZigZag.h  CountTripletsSumSmaller.h  FindLongestSubString.h  GenAllSortedArrayFromTwoArray.h  LargestContiguousSubArray.h  LongestPalindromicSubString.h  PythagoreanTriplet.h  ReverseString.h  SmallestSubArrayWithSum.h  StockBuySell.h  StringWordDict.h
src/template/: README.md  backtracking_knight_tour.cc  dp_boolean_parenthesization_problem.cc  dp_coin_change_problem.cc  dp_edit_distance.cc  dp_knapsack_problem_01.cc  dp_longest_common_subsequence.cc  dp_longest_increasing_subsequence.cc  dp_longest_palindrome_subsequence.cc  dp_longest_palindrome_substring.cc  dp_longest_path_in_matirx.cc  dp_maximal_product_when_cutting_rope.cc  dp_minimum_partition.cc  dp_optimal_strategy_for_a_game.cc  dp_rod_cutting.cc  dp_stock_problem.cc  dp_subset_sum_problem.cc  dp_ways_of_cover_distance.cc  dp_word_break_problem.cc  leetcode.md  linkedlist_detect_cycle.cc  main.cc  notes.md  rotated_sorted_array_find_min.cc  rotated_sorted_array_search.cc  sort_template.cc  stock_problem.cc  template.md  template_backtrack.cc  template_binary_heap.cc  template_binary_search.cc  template_binary_tree.cc  template_calculate.cc  template_divide_conquer.cc  template_graph.cc  template_linked_list.cc  template_pattern_search.cc  template_sort.cc  template_stack.cc  template_trie.cc  (+2 more)
src/testsuit/: CMakeLists.txt  TestBase.cc  TestBase.h
src/tmp/: CutRod.cc  GenAllSortedFromTwoSortedArray.cc  Knapsack.cc  LCS.cc  LIS.cc  MaxProductCutting.cc  MinPartition.cc  Permutation.cc  main.cc
src/tree/: CMakeLists.txt
src/tree_heap/: BinarySearchTree.h  BinaryTree.h  CMakeLists.txt  FindMaxPathSumInBinaryTree.h  FindMinimumDepthOfBinaryTree.h  Heap.h  Tree.h
